<resources>
    <string name="app_name">NotEverywhere</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="list_title">My Notes</string>
    <string name="note_title">Note</string>
    <string name="note_title_hint">Enter Title</string>
    <string name="note_desc_hint">Enter Your Detail</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="date">Date</string>
</resources>